test/langtools/tools/javac/patterns/EnhancedVariableDeclAssignmentNR1SRegressionErrors.out
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:12:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.SA2<java.lang.Integer>, EnhancedVariableDeclAssignmentNR1SRegressionErrors.SB2<java.lang.String>)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:15:21: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.SA2<java.lang.String>, EnhancedVariableDeclAssignmentNR1SRegressionErrors.SB2<?>)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:23:21: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.SI, EnhancedVariableDeclAssignmentNR1SRegressionErrors.Leaf)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:30:25: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.ConcreteSA, EnhancedVariableDeclAssignmentNR1SRegressionErrors.ConcreteSB)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:38:23: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.MultiSA, EnhancedVariableDeclAssignmentNR1SRegressionErrors.MultiSB1)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:46:27: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.MultiSI, EnhancedVariableDeclAssignmentNR1SRegressionErrors.MultiImpl1)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:54:15: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.I<java.lang.Long>, EnhancedVariableDeclAssignmentNR1SRegressionErrors.A)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:64:16: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.E, EnhancedVariableDeclAssignmentNR1SRegressionErrors.B1)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:72:15: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.II<java.lang.Long>, EnhancedVariableDeclAssignmentNR1SRegressionErrors.J)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:80:24: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.III<java.lang.String>, EnhancedVariableDeclAssignmentNR1SRegressionErrors.JG<java.lang.String>)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:88:16: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.S, EnhancedVariableDeclAssignmentNR1SRegressionErrors.L1)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:98:23: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.Base, EnhancedVariableDeclAssignmentNR1SRegressionErrors.Value)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:110:17: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.GI1<java.lang.String>, EnhancedVariableDeclAssignmentNR1SRegressionErrors.GA1)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:123:22: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.GI2<java.lang.String>, EnhancedVariableDeclAssignmentNR1SRegressionErrors.GMid2<?>)
EnhancedVariableDeclAssignmentNR1SRegressionErrors.java:136:17: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: EnhancedVariableDeclAssignmentNR1SRegressionErrors.II<java.lang.Long>, EnhancedVariableDeclAssignmentNR1SRegressionErrors.JJJ)
15 errors
